# Advent-Of-Code

./: .gitignore  .pre-commit-config.yaml  D1-Report_Repair.py  D1-Report_Repair_P2.py  D2-Password.py  D2-Password_P2.py  D3-Toboggan_Trajectory.py  D4-Passport_Processing.py  D4-Passport_Processing_P2.py  README.md  init.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml  tests.yaml  update_readme.yaml
2015/1/: README.md  code.py
2015/10/: README.md  code.py  statement.html
2015/11/: README.md  code.py  statement.html
2015/12/: README.md  code.py  statement.html
2015/13/: README.md  code.py  statement.html
2015/14/: README.md  code.py  statement.html
2015/15/: README.md  code.py  statement.html
2015/16/: README.md  code.py  statement.html
2015/17/: README.md  code.py  statement.html
2015/18/: README.md  code.py  statement.html
2015/19/: README.md  code.py  statement.html
2015/2/: README.md  code.py  statement.html
2015/20/: README.md  code.py  statement.html
2015/21/: README.md  code.py  statement.html
2015/22/: README.md  code.py  statement.html
2015/23/: README.md  code.py  statement.html
2015/24/: README.md  code.py  statement.html
2015/25/: README.md  code.py  statement.html
2015/3/: README.md  code.py
2015/4/: README.md  code.py  statement.html
2015/5/: README.md  code.py  statement.html
2015/6/: README.md  code.py
2015/7/: README.md  code.py
2015/8/: README.md  code.py  statement.html
2015/9/: README.md  code.py  statement.html
2016/1/: code.py
2016/10/: code.py
2016/11/: code.py
2016/12/: code.py
2016/13/: README.md  code.py  statement.html
2016/14/: README.md  code.py  statement.html
2016/15/: code.py
2016/16/: README.md  code.py  statement.html
2016/17/: README.md  code.py  statement.html
2016/18/: code.py
2016/19/: README.md  code.py  statement.html
2016/2/: code.py
2016/20/: code.py
2016/21/: code.py
2016/22/: code.py
2016/23/: code.py
2016/24/: code.py
2016/25/: code.py
2016/3/: code.py
2016/4/: code.py
2016/5/: README.md  code.py  statement.html
2016/6/: code.py
2016/7/: code.py
2016/8/: code.py
2016/9/: code.py
2017/1/: code.py
2017/10/: code.py
2017/11/: code.py
2017/12/: code.py
2017/13/: README.md  code.py
2017/14/: README.md  code.py  statement.html
2017/15/: code.py
2017/16/: code.py
2017/17/: README.md  code.py  statement.html
2017/18/: code.py
2017/19/: code.py
2017/2/: code.py
2017/20/: code.py
2017/21/: code.py
2017/22/: code.py
2017/23/: code.py
2017/24/: code.py
2017/25/: code.py
2017/3/: README.md  code.py  statement.html
2017/4/: code.py
2017/5/: code.py
2017/6/: code.py
2017/7/: code.py
2017/8/: code.py
2017/9/: code.py
2018/1/: code.py
2018/10/: code.py
2018/11/: README.md  code.py  statement.html
2018/12/: code.py
2018/13/: code.py
2018/14/: README.md  code.py  statement.html
2018/15/: code.py
2018/16/: code.py
2018/17/: code.py
2018/18/: code.py
2018/19/: code.py
2018/2/: code.py
2018/20/: code.py
2018/21/: code.py
2018/22/: code.py
2018/23/: code.py
2018/24/: code.py
2018/25/: code.py
2018/3/: code.py
2018/4/: code.py
2018/5/: code.py
2018/6/: code.py
2018/7/: code.py
2018/8/: code.py
2018/9/: code.py
2019/1/: code.py
2019/10/: code.py
2019/11/: code.py
2019/12/: code.py
2019/13/: code.py
2019/14/: code.py
2019/15/: code.py
2019/16/: code.py
2019/17/: code.py
2019/18/: code.py
2019/19/: code.py
2019/2/: code.py
2019/20/: code.py
2019/21/: code.py
2019/22/: code.py
2019/23/: code.py
2019/24/: code.py
2019/25/: code.py
2019/3/: code.py
2019/4/: README.md  code.py  statement.html
2019/5/: code.py
2019/6/: code.py
2019/7/: code.py
2019/8/: code.py
2019/9/: code.py
2020/1/: README.md  code.py  statement.html
2020/10/: README.md  code.py  statement.html
2020/11/: README.md  code.py  statement.html
2020/12/: README.md  code.py  statement.html
2020/13/: README.md  code.py  statement.html
2020/14/: code.py
2020/15/: README.md  code.py  statement.html
2020/16/: code.py
2020/17/: README.md  code.py
2020/18/: code.py
2020/19/: code.py
2020/2/: README.md  code.py  statement.html
2020/20/: code.py
2020/21/: code.py
2020/22/: README.md  code.py
2020/23/: README.md  code.py  statement.html
2020/24/: code.py
2020/25/: code.py
2020/3/: README.md  code.py  statement.html
2020/4/: README.md  code.py  statement.html
2020/5/: README.md  code.py  statement.html
2020/6/: README.md  code.py  statement.html
2020/7/: README.md  code.py  (+1 more)
(+191 files in other folders)
