[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42.0", "setuptools_scm[toml]>=5", "wheel"]

[tool.pytest.ini_options]
testpaths = [
  "tests",
]

[tool.mypy]
mypy_path = "src"
allow_redefinition = true
ignore_missing_imports = true
ignore_missing_imports_per_module = true
show_error_codes = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true

[tool.black]
line-length = 127
