[metadata]
name = adventofcode
description = Collection of Advent of Code solutions
long_description = file: README.md
long_description_content_type = text/markdown
author = Luke Eltiste
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    adventofcode
install_requires =
    more-itertools==8.13.0
    rich==10
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    generate-readme = adventofcode.scripts.generate_readme:generate_readme
    generate-benchmarks = adventofcode.scripts.benchmarks:generate_benchmarks
    run-all = adventofcode.scripts.runner:run_all
    add-day = adventofcode.scripts.add_day:add_day
    clean-repo = adventofcode.scripts.clean_repo:clean_repo

[options.extras_require]
testing =
    flake8==4.0.1
    mypy==0.961
    pytest==7.1.2
    pytest-cov==3.0.0
    pytest-mock==3.6.1
    tox==3.25.1

[options.package_data]
adventofcode = py.typed

[flake8]
extend_ignore = E203
in-place = true
max-line-length = 127
pep8-passes = 2000
recursive = true
