[metadata]
name = adventofcode
description = Collection of Advent of Code solutions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Frazzer951/Advent-Of-Code
author = Luke Eltiste
author_email = luke343279@gmail.com
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
packages =
    adventofcode
install_requires =
    more-itertools>=8.13
    rich>=10.14
python_requires = >=3.8
package_dir =
    =src
zip_safe = no

[options.entry_points]
console_scripts =
    generate-readme = adventofcode.scripts.generate_readme:generate_readme
    run-all = adventofcode.scripts.runner:run_all
    add-day = adventofcode.scripts.add_day:add_day

[options.extras_require]
testing =
    pytest
    pytest-cov
    setuptools

[flake8]
extend_ignore = E203
in-place = true
max-line-length = 127
pep8-passes = 2000
recursive = true
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
    .venv
